tests/error/09.program
{
    a = a_s;
    b_s = b;
}